# rust-shared-todo-list

./: .gitignore  Cargo.toml
src/: background.rs  config.rs  futil.rs  item.rs  main.rs  routes.rs  validation.rs
static/: index.html  post.html
static/scripts/: fetch.js  post.js
static/styles/: base.css  loader.css  post.css  view.css
