[package]
name = "rust-shared-todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.3"
actix-web = "4.2.1"
actix-web-validator = "5.0.1"
linked_hash_set = { version = "0.1.4", features = ["serde"] }
once_cell = "1.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
validator = { version = "0.16.0", features = ["derive"] }
toml = "0.5.9"